--- a/style.css
+++ b/style.css
@@ -1,10 +1,54 @@
-.center {
-    margin: 0 auto;
+#nav-bar {
+    text-align: center;
+    white-space: nowrap;
+    margin: 24px;
+}
+#nav-bar, a {
+    padding: 12px;
 }
 
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 12px;
+table, caption, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.img-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+    padding-top: 8px;
+}
+
+header {
     text-align: center;
 }
+
+/*
+employee information table border style and text align
+ */
+table, td, th {
+    white-space: nowrap;
+    border: 2px solid black;
+    border-collapse: collapse;
+    padding: 8px;
+    text-align: left;
+}
+
+thead {
+    font-weight: bold;
+    position: sticky;
+    top: 0;
+}
+
+
+
