--- a/style.css
+++ b/style.css
@@ -59,24 +59,32 @@ table, td, th {
     text-align: left;
 }
 
+/*
+Table header style
+ */
+
 thead {
     font-weight: bold;
     position: sticky;
     top: 0;
 }
+
 caption {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 24px;
 }
+
 th {
     text-align: center;
 }
+
 .datatype {
     text-align: center;
     font-weight: lighter;
     font-style: italic;
 }
+
 /*
 https://www.w3schools.com/howto/howto_css_table_zebra.asp
 zebra strip styles codes for the table copied from above link. First Name and Last Name was also
